# okr4me

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/demo/: 12dfee01-f3f7-421f-9710-451bab763981.zuechange  2ac021db-9df0-4d53-b806-1f212965f8f1.zuechange  ad9d1391-9604-4288-9eb4-86b02f6acbeb.zuechange  complex-graph-demo.zuechange  load-complex-graph-demo.js
req/: ANFORDERUNGEN_FACHLICH.md  TECHNISCHES_KONZEPT.md
scripts/: generate-complex-graph-demo.mjs
src/: i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/domain/: document.test.ts  document.ts  keyResultValidation.test.ts  merge.test.ts  merge.ts  progress.test.ts  progress.ts  quarters.test.ts  quarters.ts  selectors.ts  types.ts  validation.ts
src/platform/: persistence.ts
src/state/: appStore.ts
src/ui/: App.test.tsx  App.tsx  ErrorBoundary.tsx  FirstRun.tsx  GoalsView.tsx  ObjectiveCard.test.tsx  ObjectiveCard.tsx  OrgBrowser.test.tsx  OrgBrowser.tsx  ProfilePanel.test.tsx  ProfilePanel.tsx  RelationGraph.test.tsx  RelationGraph.tsx  styles.css
