[package]
name = "okr4me"
version = "0.1.0"
description = "Lokaler ZuE OKR-Client"
authors = ["okr4me"]
edition = "2021"

[lib]
name = "okr4me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
